GramaticaBNF.txt
Gramática - BNF


<declaracao> ::= <atribuicao>  
                 | <expressao> ";"
                 | <declaracao_se> 
                 | <declaracao_enquanto> 
                 | <declaracao_print> 
 
<atribuicao> ::=  <nome> "=" <expressao> ";" 

<declaracao_se> ::= "se" "(" <condicao> ")" "{" <bloco_instrucoes> "}" ["senao" "{" <bloco_instrucoes> "}" ]
 
<declaracao_enquanto> ::= "enquanto" "(" <condicao> ")" "{" <bloco_instrucoes> "}"

<bloco_instrucoes> ::= <declaracao> [<bloco_instrucoes>]

<declaracao_print> ::= "print" "("<expressao>")" ";" 


<condicao> ::= <termoBool> { ("||") <termoBool> }

<termoBool> ::= <fatorBool> { ("&&") <fatorBool> } 

<fatorBool> ::= <expressao> "<" | "<=" | ">" | ">=" | "==" | "!=" <expressao> 

<expressao> ::= <termo> { ("+" | "-") <termo> }

<termo> ::= <fator> { ("*" | "/") <fator> } 

<fator> ::= <numero>  
            | <nome>  
            | <string> 
            | "(" <expr> ")" 

<nome> ::= [a-zA-Z_][a-zA-Z0-9_]* 

<string> ::= ‘"’ .* ‘"’  

<numero> ::= [0-9]+ 








 

 

 

 

 
